[gd_scene load_steps=17 format=3 uid="uid://maaxujfptt4t"]

[ext_resource type="Script" uid="uid://cmewkho0p4pml" path="res://scripts/cards/rooms/hallway_card.gd" id="1_ub876"]
[ext_resource type="Texture2D" uid="uid://d4nsdvpftcm74" path="res://assets/cards/rooms/03_Hallway_Better(2).png" id="2_cxru6"]
[ext_resource type="Script" uid="uid://dpwmnw0jvavxb" path="res://scripts/UI/upgrade_tooltip.gd" id="3_cxru6"]
[ext_resource type="FontFile" uid="uid://b3h7ukt25088t" path="res://assets/fonts/SCHLBKB.TTF" id="4_ieivf"]

[sub_resource type="Animation" id="Animation_gebks"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lvuwy"]
resource_name = "green"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_jsfnl"]
resource_name = "normal"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lnh00"]
resource_name = "occupied"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.94509804, 0.4, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dctut"]
resource_name = "red"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.13333334, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqgu2"]
_data = {
&"RESET": SubResource("Animation_gebks"),
&"green": SubResource("Animation_lvuwy"),
&"normal": SubResource("Animation_jsfnl"),
&"occupied": SubResource("Animation_lnh00"),
&"red": SubResource("Animation_dctut")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4h16"]
size = Vector2(6, 20.3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hq3rq"]
size = Vector2(1, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxru6"]
size = Vector2(135, 118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnh00"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m02it"]
size = Vector2(129, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcb10"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.16862746, 0.16862746, 0.16862746, 0.69411767)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HallwayCard" type="Node2D" groups=["hallway_cards"]]
process_mode = 1
script = ExtResource("1_ub876")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_cxru6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jqgu2")
}

[node name="DoorArea" type="Area2D" parent="." groups=["doors"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(-0.35, -64)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_y4h16")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(-0.34999847, 64)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_y4h16")

[node name="WallArea" type="Area2D" parent="." groups=["walls"]]

[node name="CollisionShape2D6" type="CollisionShape2D" parent="WallArea"]
position = Vector2(37.5, -64)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_hq3rq")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="WallArea"]
position = Vector2(-37.5, -64)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_hq3rq")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="WallArea"]
position = Vector2(37.5, 64)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_hq3rq")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="WallArea"]
position = Vector2(-37.5, 64)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_hq3rq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallArea"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_cxru6")

[node name="CenterArea" type="Area2D" parent="." groups=["center"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterArea"]
shape = SubResource("RectangleShape2D_lnh00")

[node name="MouseDetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetectArea"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_m02it")

[node name="UpgradeTooltip" type="PanelContainer" parent="."]
visible = false
top_level = true
z_index = 50
offset_left = -114.0
offset_right = 115.0
offset_bottom = 88.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vcb10")
script = ExtResource("3_cxru6")

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeTooltip"]
layout_mode = 2

[node name="TooltipText" type="RichTextLabel" parent="UpgradeTooltip/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_ieivf")
theme_override_fonts/bold_font = ExtResource("4_ieivf")
theme_override_fonts/bold_italics_font = ExtResource("4_ieivf")
theme_override_fonts/italics_font = ExtResource("4_ieivf")
theme_override_fonts/mono_font = ExtResource("4_ieivf")
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
bbcode_enabled = true
text = "Level x [br] upgarde?"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeTooltip/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 11
alignment = 1

[node name="UpgradeYesButton" type="Button" parent="UpgradeTooltip/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 24
text = "Yes"

[node name="UpgradeNoButton" type="Button" parent="UpgradeTooltip/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 24
text = "No"

[connection signal="input_event" from="MouseDetectArea" to="." method="_on_mouse_detect_area_input_event"]
[connection signal="input_event" from="MouseDetectArea" to="UpgradeTooltip" method="_on_mouse_detect_area_input_event"]
[connection signal="pressed" from="UpgradeTooltip/VBoxContainer/HBoxContainer/UpgradeYesButton" to="UpgradeTooltip" method="_on_upgrade_yes_button_pressed"]
[connection signal="pressed" from="UpgradeTooltip/VBoxContainer/HBoxContainer/UpgradeNoButton" to="UpgradeTooltip" method="_on_upgrade_no_button_pressed"]
